--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-div{
-    border-style: solid;
-    border-color: black;
-    min-height:50px;
-    margin-bottom:50px;
-  }
+body {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url("virus.jpg");
+  background-color: #000000;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-attachment: fixed;
+  color: white;
+}
+#chart {
+  max-width: 650px;
+  margin: 35px auto;
+}
