--- a/style.css
+++ b/style.css
@@ -1,12 +1,32 @@
 body {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url("virus.jpg");
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url("virus.jpg");
   background-color: #000000;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-attachment: fixed;
-  color: white;
+  color: black;
 }
 #chart {
   max-width: 650px;
   margin: 35px auto;
+}
+
+.recovered{
+  color:green;
+}
+.deaths{
+  color:darkred;
+}
+.active{
+  color:darkgoldenrod;
+}
+.confirmed{
+  color:darkblue;
+}
+.chart{
+  width:100%;
+}
+.carouselimg{
+  height:250px;
+  object-fit:cover;
 }
