HTML: Cleaned up based on W3C validator. CSS: Updated news snippet image size to fit container. JS: Added check to skip articles with no titles or source names.

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ a:hover{
 }
 .imageSmall{
   min-height:150px;
+  height:100%;
   width:100%;
   vertical-align: middle !important;
   object-fit:cover;
