--- a/style.css
+++ b/style.css
@@ -34,16 +34,13 @@ body {
   font-size:110%;
   text-decoration:underline;
 }
-.chart{
-  width:100%;
-}
 .carouselimg{
   height:230px;
   width:350px;
   object-fit:cover;
 }
 #mapid { 
-  height: 250px; 
+  height: 350px; 
   margin-bottom:50px;
 }
 #globalPieChart{
@@ -62,10 +59,14 @@ h4{
   text-align:center;
   padding:15px;
   border-radius: 50px 5px 50px 5px;
-  background-color:rgba(0, 0, 0, 0.4);
+  background-color:rgba(0, 0, 0, 0.3);
   margin-bottom:20px;
 }
-h6{
+h5{
+  text-align:center;
+  margin-bottom:20px;
+}
+.captitle{
   font-weight: bold;
 }
 a {
@@ -128,4 +129,36 @@ a:hover{
 }
 .smallNewsHeader{
   padding-top:25px;
+  text-align:left;
+}
+.smallNewsContent{
+  text-align:left;
+}
+.infodiv{
+  background-color:rgba(0,0,0,0.5);
+  justify-content:center;
+}
+.infoimg{
+  width:100%;
+  padding:35px;
+  transition: transform .2s;
+}
+.infoimg:hover{
+  transform: scale(1.2);
+}
+.infoimg2{
+  width:100%;
+  height:100%;
+  border-radius: 400px;
+  margin-bottom:15px;
+  margin-top:15px;
+}
+a.newsText:link{
+  color:white !important;
+}
+a.newsText:visited{
+  color:white;
+}
+a.newsText:hover {
+  text-decoration: underline;
 }
